// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-jest-preset CJS presets createDefaultPreset should return preset config 1`] = `
{
  "transform": {
    "^.+.tsx?$": [
      "ts-jest",
      {
        "tsconfig": "tsconfig.spec.json",
      },
    ],
  },
}
`;

exports[`create-jest-preset CJS presets createJsWithTsPreset should return preset config 1`] = `
{
  "transform": {
    "^.+.[tj]sx?$": [
      "ts-jest",
      {
        "isolatedModules": true,
        "tsconfig": "tsconfig.spec.json",
      },
    ],
  },
}
`;

exports[`create-jest-preset CJS presets createWithBabelPreset should return preset config 1`] = `
{
  "transform": {
    "^.+.jsx?$": "babel-jest",
    "^.+.tsx?$": [
      "ts-jest",
      {
        "babelConfig": {
          "babelrc": true,
        },
        "tsconfig": "tsconfig.spec.json",
      },
    ],
  },
}
`;

exports[`create-jest-preset ESM presets createDefaultEsmPreset should return preset config 1`] = `
{
  "extensionsToTreatAsEsm": [
    ".jsx",
    ".ts",
    ".tsx",
    ".mts",
  ],
  "transform": {
    "^.+\\.m?tsx?$": [
      "ts-jest",
      {
        "tsconfig": "tsconfig.spec.json",
        "useESM": true,
      },
    ],
  },
}
`;

exports[`create-jest-preset ESM presets createJsWithTsEsmPreset should return preset config 1`] = `
{
  "extensionsToTreatAsEsm": [
    ".jsx",
    ".ts",
    ".tsx",
    ".mts",
  ],
  "transform": {
    "^.+\\.m?[tj]sx?$": [
      "ts-jest",
      {
        "isolatedModules": true,
        "tsconfig": "tsconfig.spec.json",
        "useESM": true,
      },
    ],
  },
}
`;

exports[`create-jest-preset ESM presets createWithBabelEsmPreset should return preset config 1`] = `
{
  "extensionsToTreatAsEsm": [
    ".jsx",
    ".ts",
    ".tsx",
    ".mts",
  ],
  "transform": {
    "^.+\\.m?jsx?$": "babel-jest",
    "^.+\\.m?tsx?$": [
      "ts-jest",
      {
        "babelConfig": {
          "babelrc": true,
        },
        "tsconfig": "tsconfig.spec.json",
        "useESM": true,
      },
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 1`] = `
{
  "transform": {
    "^.+\\.tsx?$": [
      "ts-jest/legacy",
      {},
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 2`] = `
{
  "transform": {
    "^.+\\.tsx?$": [
      "ts-jest",
      {},
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 3`] = `
{
  "transform": {
    "^.+\\.[tj]sx?$": [
      "ts-jest/legacy",
      {},
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 4`] = `
{
  "transform": {
    "^.+\\.[tj]sx?$": [
      "ts-jest",
      {},
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 5`] = `
{
  "transform": {
    "^.+\\.tsx?$": [
      "ts-jest/legacy",
      {},
    ],
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 6`] = `
{
  "moduleFileExtensions": [
    "bar",
  ],
  "testMatch": [
    "foo",
  ],
  "transform": {
    "^.+\\.tsx?$": [
      "ts-jest",
      {},
    ],
    "foo": "bar",
  },
}
`;

exports[`create-jest-preset createJestPreset should return correct preset 7`] = `
{
  "extensionsToTreatAsEsm": [
    ".jsx",
    ".ts",
    ".tsx",
    ".mts",
  ],
  "moduleFileExtensions": [
    "bar",
  ],
  "testMatch": [
    "foo",
  ],
  "transform": {
    "^.+\\.m?[tj]sx?$": [
      "ts-jest/legacy",
      {
        "useESM": true,
      },
    ],
    "foo": "bar",
  },
}
`;
